--- a/Views/Events/Index.cshtml
+++ b/Views/Events/Index.cshtml
@@ -115,7 +115,7 @@
                                 <div class="product__item__text">
                                     <h6>@Html.DisplayFor(modelItem => item.Ten)</h6>
                                     @*<a href="" class="add-cart"> =>Go Detail</a>*@
-                                    <a class="add-cart" href="@Url.Action("Details", "Events", new { id = item.IdsanPham })">=>Go Detail </a>
+                                    <a class="add-cart" href="@Url.Action("Details", "Events", new { id = item.IDSanPham })">=>Go Detail </a>
    
                                     <h5>@Html.DisplayFor(modelItem => item.Gia)</h5>
 
