--- a/Views/Home/ProductsHot.cshtml
+++ b/Views/Home/ProductsHot.cshtml
@@ -24,7 +24,7 @@
                             </div>
                             <div class="product__item__text">
                                 <h6>Multi-pocket Chest Bag</h6>
-                                <a class="add-cart" href="@Url.Action("Details", "Events", new { id = item.IdsanPham })">Go Detail </a>
+                                <a class="add-cart" href="@Url.Action("Details", "Events", new { id = item.IDSanPham })">Go Detail </a>
                                 <div class="rating">
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
@@ -52,7 +52,7 @@
                             </div>
                             <div class="product__item__text">
                                 <h6>Multi-pocket Chest Bag</h6>
-                                <a class="add-cart" href="@Url.Action("Details", "Events", new { id = item.IdsanPham })">Go Detail </a>
+                                <a class="add-cart" href="@Url.Action("Details", "Events", new { id = item.IDSanPham })">Go Detail </a>
                                 <div class="rating">
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
