--- a/Views/Events/MoreToYou.cshtml
+++ b/Views/Events/MoreToYou.cshtml
@@ -13,7 +13,7 @@
             {
                 <div class="col-lg-3 col-md-6 col-sm-6 col-sm-6">
                     <div class="product__item">
-                        <div class="product__item__pic set-bg" data-setbg="/Content/img/@Html.DisplayFor(modelItem => item.Images)">
+                        <div class="product__item__pic set-bg" style="background-image: url('/Content/img/@Html.DisplayFor(moldelItem => item.Images)')">
                             <span class="label">New</span>
                             <ul class="product__hover">
                                 <li><a href="#"><img src="~/Content/img/icon/heart.png" alt=""></a></li>
@@ -25,7 +25,7 @@
                         </div>
                         <div class="product__item__text">
                             <h6>@Html.DisplayFor(modelItem => item.Ten)</h6>
-                            <a class="add-cart" href="@Url.Action("Details", "Events", new { id = item.IdsanPham })">=>Go Detail </a>
+                            <a class="add-cart" href="@Url.Action("Details", "Events", new { id = item.IDSanPham })">=>Go Detail </a>
                             <div class="rating">
                                 @*<i class="fa fa-star-o"></i>
                                 <i class="fa fa-star-o"></i>
